<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/login_page_forget_register_lay"
        android:layout_width="wrap_content"
        android:layout_below="@+id/login_page_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_page_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/register_btn" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="@color/gray"
            android:layout_toEndOf="@+id/login_page_register_tv"/>
        <!--android:background="?android:attr/listDivider" -->


        <TextView
            android:id="@+id/login_page_forgetPsw_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/divider"
            android:text="@string/forget_psw" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/app_title"
        android:textSize="50sp" />
    <EditText
        android:id="@+id/login_page_account_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_edit_text_shape"
        android:ems="10"
        android:inputType="textPersonName"
        android:textCursorDrawable="@drawable/shape_text_cursor"
        android:textColor="@color/black"
        android:hint="@string/user_account"/>


    <EditText
        android:id="@+id/login_page_psw_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_page_account_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_edit_text_shape"
        android:textCursorDrawable="@drawable/shape_text_cursor"
        android:ems="10"
        android:hint="@string/psw_short"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_page_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button_long_press"
        android:layout_below="@+id/login_page_psw_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/login_btn" />

</RelativeLayout>